allow database access

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,10 @@ eureka:
 spring:
   application:
     name: ISSUES-SERVICE
+  h2:
+    console:
+      enabled: 'true'
+    datasource:
+      platform: h2
+      url: 'jdbc:h2:mem:sam'
+      
