--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ eureka:
 spring:
   h2:
     console:
-      enabled: 'true'
+      enabled: true
     datasource:
       platform: h2
       url: 'jdbc:h2:mem:sam1'
