--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,9 @@ spring:
 
   jpa:
     defer-datasource-initialization: 'true'
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
