--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
   port: 8081
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url: 
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    hostname: localhost
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
+#  instance:
+#    hostname: localhost
 
 spring:
   h2:
@@ -19,8 +19,8 @@ spring:
       url: 'jdbc:h2:mem:sam1'
       username: user
       password: pass
-  application:
-    name: ISSUES-SERVICE
+#  application:
+#    name: ISSUES-SERVICE
 
   jpa:
     defer-datasource-initialization: 'true'
